@@ -47,8 +47,14 @@ import org.kiji.annotations.ApiAudience;
  *
  * <p>Until this issue is resolved in Avro, use this class to read from Avro "map"
  * types.  This is a read-only map.  Calling a method that would mutate the map will throw
- * an <code>UnsupportedOperationException</code>.  If the underlying Avro "map" is
- * mutated, you should call <code>read()</code> to reread the map.
+ * an <code>UnsupportedOperationException</code>.</p>
+ *
+ * <p>Note that the AvroMapReader wraps the state of the Avro "map" at the time of the
+ * reader's creation. If the underlying Avro "map" is mutated and you want the reader to
+ * reflect its new contents, you should call  {@link AvroMapReader#reload()} to reload
+ * the map. Otherwise the <code>AvroMapReader</code> will reflect the state of the wrapped
+ * Avro "map" at the time of the Reader's creation or the most recent call to
+ * <code>reload()</code>.</p>
  *
  * @param <V> The map's value type.
  */
@@ -72,11 +78,15 @@ public final class AvroMapReader<V> implements Map<CharSequence, V> {
    */
   private AvroMapReader(Map<CharSequence, V> map) {
     mMap = map;
-    mMirror = null;
+    reload();
   }
 
   /**
    * Creates a new Avro map reader wrapping a map generated by the Avro framework.
+   * The map will be loaded with a copy of the current state of the <code>map</code>
+   * parameter; you must call {@link #reload()} on the <code>AvroMapReader</code>
+   * after later mutations to the <code>map</code> if you want them to be
+   * reflected by the reader.
    *
    * @param map The map obtained from the Avro framework that should be wrapped.
    * @param <V> The type of the values contained in the map.
@@ -86,24 +96,21 @@ public final class AvroMapReader<V> implements Map<CharSequence, V> {
     return new AvroMapReader<V>(map);
   }
 
-  /** Reads the wrapped Avro map into a Map with a comparator for CharSequences. */
-  public void read() {
-    mMirror = new TreeMap<CharSequence, V>(AvroCharSequenceComparator.INSTANCE);
-    mMirror.putAll(mMap);
-  }
-
   /**
-   * Gets the mirrored Avro map that works with any CharSequence key.
+   * Updates <code>AvroMapReader</code> to reflect any mutations (additions,
+   * deletions or updates) that have been made to the the wrapped Avro map
+   * used to create it.
    *
-   * <p>This method will read the wrapped Avro map into the mirror if necessary.</p>
-   *
-   * @return The mirrored Avro map.
+   * <p>Call this method whenever you want the <code>AvroMapReader</code>
+   * to use the latest state of the Avro map.</p>
    */
-  private Map<CharSequence, V> getMirror() {
+  public void reload() {
     if (null == mMirror) {
-      read();
+      mMirror = new TreeMap<CharSequence, V>(AvroCharSequenceComparator.INSTANCE);
+    } else {
+      mMirror.clear();
     }
-    return mMirror;
+    mMirror.putAll(mMap);
   }
 
   /** {@inheritDoc} */
@@ -115,49 +122,49 @@ public final class AvroMapReader<V> implements Map<CharSequence, V> {
   /** {@inheritDoc} */
   @Override
   public boolean containsKey(Object key) {
-    return getMirror().containsKey(key);
+    return mMirror.containsKey(key);
   }
 
   /** {@inheritDoc} */
   @Override
   public boolean containsValue(Object value) {
-    return mMap.containsValue(value);
+    return mMirror.containsValue(value);
   }
 
   /** {@inheritDoc} */
   @Override
   public Set<Map.Entry<CharSequence, V>> entrySet() {
-    return getMirror().entrySet();
+    return mMirror.entrySet();
   }
 
   /** {@inheritDoc} */
   @Override
   public boolean equals(Object o) {
-    return getMirror().equals(o);
+    return mMirror.equals(o);
   }
 
   /** {@inheritDoc} */
   @Override
   public V get(Object key) {
-    return getMirror().get(key);
+    return mMirror.get(key);
   }
 
   /** {@inheritDoc} */
   @Override
   public int hashCode() {
-    return getMirror().hashCode();
+    return mMirror.hashCode();
   }
 
   /** {@inheritDoc} */
   @Override
   public boolean isEmpty() {
-    return mMap.isEmpty();
+    return mMirror.isEmpty();
   }
 
   /** {@inheritDoc} */
   @Override
   public Set<CharSequence> keySet() {
-    return getMirror().keySet();
+    return mMirror.keySet();
   }
 
   /** {@inheritDoc} */
@@ -181,12 +188,12 @@ public final class AvroMapReader<V> implements Map<CharSequence, V> {
   /** {@inheritDoc} */
   @Override
   public int size() {
-    return mMap.size();
+    return mMirror.size();
   }
 
   /** {@inheritDoc} */
   @Override
   public Collection<V> values() {
-    return mMap.values();
+    return mMirror.values();
   }
 }
